fix overflow in CitySpark stripe

--- a/src/components/citySpark/CitySpark.scss
+++ b/src/components/citySpark/CitySpark.scss
@@ -2,6 +2,7 @@
 
 .citySpark_stripe{
   display: flex;
+  overflow-y: hidden;
   flex-direction: column;
   align-items: center;
   h2{
